# MarkovChainGenerator

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MarkovChain.cpp  MarkovChain.h  README.md  main.cpp
resources/: logfile.txt
